--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #fdfdfd;
+$background-color: #f5cda7;
 $brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
@@ -48,6 +48,8 @@ $on-laptop:        800px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
-        "layout",
-        "syntax-highlighting"
+        //"layout",
+        //"syntax-highlighting"
+        "custom"
 ;
+
