--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -16,6 +16,7 @@ body {
 
     svg {
         max-height: 80vh;
+        max-width: 80vw;
         height: 80vh;
         fill: currentColor;
         margin: 0 auto;
